Fixed collapse animation
Removed padding from collapse targets.

--- a/src/assets/sass/page-content/_feedback.scss
+++ b/src/assets/sass/page-content/_feedback.scss
@@ -75,10 +75,13 @@
 #qg-page-feedback {
     //display: none;   
     background-color: #f8f8f8;
-    padding-top: 1em;
-    padding-bottom: 1em;  
     color: #000;
-    @include fontSize(16px); 
+    @include fontSize(16px);
+
+    #qg-page-feedback-form{
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
 
     #feedback-captcha-container {
         display:none; 
